# Highly-Parallel-Graph-Server

./: README.md  shell.nix
src/main/cpp/: Config.hh  GraphWorker.cc  GraphWorker.hh  NetWorker.cc  NetWorker.hh  main.cpp  meson.build  oldmain.cpp
src/main/cpp/Epoll/: Connection.hh  EpollConnection.cc  EpollConnection.hh  EpollGraphMessage.cc  EpollGraphMessage.hh  EpollIncoming.cc  EpollIncoming.hh  EpollInstance.cc  EpollResult.cc  EpollResult.hh  EpollServer.cc  EpollServer.hh
src/main/cpp/Epoll/MessageQueue/: MessageQueue.hh
src/main/cpp/Graph/: Edge.cc  Edge.hh  Graph.cc  Graph.hh  GraphEdge.cc  GraphEdge.hh  Location.cc  Location.hh  Message.hh  Node.cc  Node.hh  PointMap.cc  PointMap.hh  PointMap_old.cc  QuadTree.cc  QuadTree.hh  Result.hh  Walk.cc  Walk.hh
src/main/cpp/MessageQueue/: MessageQueue.cc  MessageQueue.hh
src/main/cpp/proto/: locations.pb.cc  locations.pb.h
src/test/java/cz/esw/serialization/: DataProducerTest.java
